# deep-research-mcp

./: README.md  llms-install.md  mcpize.yaml  pyproject.toml  requirements.txt  server.py
src/deep_research_mcp/: __init__.py  analyzers.py  report_generator.py  search_engines.py  server.py
