[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-mcp"
version = "1.0.0"
description = "多源深度调研MCP Server - Web/新闻/学术多源搜索+智能分析+结构化报告"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ai-expert-skills" },
]
keywords = ["mcp", "research", "search", "analysis", "web-scraping", "report"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
deep-research-mcp = "deep_research_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_research_mcp"]
